<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".SubmitClaim">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Submit Claim"
        app:titleTextColor="@android:color/white" />


    <LinearLayout
        android:id="@+id/firstLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/name_field"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1.4"
            android:background="@color/colorAccent"
            android:hint="@string/name_hint"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions|textVisiblePassword"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/time_of_accident"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/toa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1.4"
            android:background="@color/colorAccent"
            android:hint="@string/enter_time_hint"
            android:imeOptions="actionDone"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.6"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/date_of_accident"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/doa"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1.4"
            android:background="@color/colorAccent"
            android:hint="@string/enter_date_hint"
            android:imeOptions="actionDone"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="0.6"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:text="@string/describe_accident"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1.4"
        android:background="#ffffff"
        android:imeOptions="actionDone"
        android:inputType="textImeMultiLine"
        android:paddingStart="10dp"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/btn_takepicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/take_picture_btn" />

    <Button
        android:id="@+id/submit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit"
        android:textColor="@color/colorAccent" />


</LinearLayout>