<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".UserInfoForm">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Contact Information Form"
        app:titleTextColor="@android:color/white" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/street_address_field"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1.4"
                android:background="@color/colorAccent"
                android:hint="@string/street_address_hint"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="75dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0.6"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/city"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1.4"
                android:background="@color/colorAccent"
                android:hint="@string/city_hint"
                android:imeOptions="actionDone"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:paddingStart="10dp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/state_field"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/stateSpinner"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:entries="@array/state_codes"
                    android:prompt="@string/state"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/zip_code_field"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/zipcode"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.4"
                    android:background="@color/colorAccent"
                    android:hint="@string/zip_code_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/email_field"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.4"
                    android:background="@color/colorAccent"
                    android:hint="@string/email_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress|textNoSuggestions|textVisiblePassword"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:text="@string/phone_num_field"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/phonenum"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.4"
                    android:background="@color/colorAccent"
                    android:hint="@string/phone_num_field"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/continuebtn"
            android:textColor="@color/colorAccent"
            android:layout_alignParentBottom="true" />

</RelativeLayout>